--- a/opdracht1/roles/databaseserver/tasks/main.yml
+++ b/opdracht1/roles/databaseserver/tasks/main.yml
@@ -5,6 +5,22 @@
     update_cache: yes
   notify: restart mysql
 
+- name: Python install voor mysql
+  apt:
+    name: python3-pymysql
+    state: present
+    update_cache: yes  
+
+- name: Fix root user to use mysql_native_password
+  become: true
+  shell: |
+    mysql -u root <<EOF
+    ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY '{{ mysql_root_password }}';
+    FLUSH PRIVILEGES;
+    EOF
+  args:
+    executable: /bin/bash
+
 - name: Create dbuser
   mysql_user:
     name: "{{ mysql_user }}"
@@ -12,6 +28,8 @@
     priv: "*.*:ALL"
     host: "%"
     state: present
+    login_user: root
+    login_password: "{{ mysql_root_password }}"
 
 - name: Start mysql
   service:
