--- a/opdracht1/roles/databaseserver/tasks/main.yml
+++ b/opdracht1/roles/databaseserver/tasks/main.yml
@@ -3,33 +3,41 @@
     name: mysql-server
     state: present
     update_cache: yes
-  notify: restart mysql
 
-- name: Python install voor mysql
+- name: Install PyMySQL
   apt:
     name: python3-pymysql
     state: present
-    update_cache: yes  
+    update_cache: yes
 
-- name: Fix root user to use mysql_native_password
+- name: Create /root/.my.cnf for socket access
+  become: true
+  copy:
+    dest: /root/.my.cnf
+    content: |
+      [client]
+      user=root
+    owner: root
+    group: root
+    mode: '0600'
+
+- name: Ensure MySQL root user uses auth_socket
   become: true
   shell: |
-    mysql -u root <<EOF
-    ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY '{{ mysql_root_password }}';
-    FLUSH PRIVILEGES;
-    EOF
+    mysql -e "ALTER USER 'root'@'localhost' IDENTIFIED WITH auth_socket; FLUSH PRIVILEGES;"
   args:
     executable: /bin/bash
+  ignore_errors: yes
 
-- name: Create dbuser
+- name: Create dbuser via socket
+  become: true
   mysql_user:
     name: "{{ mysql_user }}"
     password: "{{ mysql_password }}"
     priv: "*.*:ALL"
     host: "%"
     state: present
-    login_user: root
-    login_password: "{{ mysql_root_password }}"
+    login_unix_socket: /run/mysqld/mysqld.sock
 
 - name: Start mysql
   service:
